#  Copyright (c) 2020 SBA - MIT License

[metadata]
name = wpldump
classifiers=
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 3 - Alpha

    # Indicate who your project is intended for
    Intended Audience :: End Users/Desktop
    Environment :: Console

    # Pick your license as you wish (should match "license" above)
    License :: OSI Approved :: MIT License

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Multimedia :: Sound/Audio

license = MIT
author = SBA
author_email = s-ball@laposte.net
description = Dumps the content of a WPL Playlist file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s-ball/wpldump

[options]
packages= wpldump
python_requires = >=3.6
install_requires = PyWave>=0.5
setup_requires = setuptools>=42
                 setuptools_scm>=3.4

[options.entry_points]
console_scripts =
    wpldump = wpldump:_run
